--- a/src/app/claims/claims-details/claims-details.html
+++ b/src/app/claims/claims-details/claims-details.html
@@ -2,8 +2,12 @@
   <mat-card *ngIf="claims; else loading" class="livestock-card">
     <mat-card-header>
       <mat-card-title>Claims Details</mat-card-title>
-      <mat-card-actions align="end">
-        <button mat-raised-button color="primary" (click)="onUpdate()">Update</button>
+      <mat-card-actions align="end" *ngIf="user?.role === 'farmer'">
+        <button mat-raised-button color="primary"
+          (click)="onUpdate()"
+          [disabled]="claims.status === 'pending'
+          || claims.status === 'approved'"
+        >Update</button>
       </mat-card-actions>
     </mat-card-header>
 
@@ -72,6 +76,29 @@
         <img [src]="fullScreenPhotoUrl" alt="Full Screen Photo" class="full-screen-photo">
       </div>
     </mat-card-content>
+
+        <!-- Approve / Reject Buttons -->
+    <mat-card-actions class="approval-buttons" *ngIf="user?.role === 'admin' || user?.role === 'technician'">
+      <button mat-stroked-button color="warn" (click)="onReject()"
+         [disabled]="claims.status === 'rejected'"
+      >
+        <mat-icon>close</mat-icon> Reject
+      </button>
+      <button mat-raised-button color="primary" (click)="onApprove()"
+         [disabled]="claims.status === 'approved'"
+      >
+        <mat-icon>check_circle</mat-icon> Approve
+      </button>
+    </mat-card-actions>
+    <mat-card-actions class="approval-buttons" *ngIf="user?.role === 'farmer'">
+      <button mat-raised-button color="primary" 
+        (click)="toReview()"
+        [disabled]="claims.status === 'pending'
+        || claims.status === 'approved'"
+      >
+        <mat-icon>send</mat-icon> Submit for Review?
+      </button>
+    </mat-card-actions>
   </mat-card>
 
   <ng-template #loading>
