--- a/src/app/health-record/health-record-form/health-record-form.html
+++ b/src/app/health-record/health-record-form/health-record-form.html
@@ -6,9 +6,39 @@
       </mat-card-header>
 
       <mat-card-content>
+
+        <!-- farmer -->
+        <div class="form-row">
+          <mat-form-field appearance="outline" class="half-width">
+            <mat-label>Farmer</mat-label>
+            <mat-select formControlName="farmer">
+              <mat-option *ngFor="let f of farmers" [value]="f._id">{{ f.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <!-- livestock Group -->
+          <mat-form-field appearance="outline" class="half-width">
+            <mat-label>Livestock Group</mat-label>
+            <mat-select formControlName="livestockGroup">
+              <mat-option *ngFor="let b of filteredGroups" [value]="b._id">
+                {{ b.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
         <!-- Row 1: Animal, Body Condition, Weight -->
         <div class="form-row">
           <mat-form-field appearance="outline" class="third-width">
+            <mat-label>Animal</mat-label>
+            <mat-select formControlName="animal">
+            <mat-option *ngFor="let a of filteredAnimals" [value]="a._id">
+              {{ a.name }}
+            </mat-option>
+            </mat-select>
+            <mat-error *ngIf="animal.hasError('required')">Animal is required.</mat-error>
+          </mat-form-field>
+          <!-- <mat-form-field appearance="outline" class="third-width">
             <mat-label>Animal</mat-label>
             <mat-select formControlName="animal">
             <mat-option *ngFor="let a of animals" [value]="a._id">
@@ -16,7 +46,7 @@
             </mat-option>
             </mat-select>
             <mat-error *ngIf="animal.hasError('required')">Animal is required.</mat-error>
-          </mat-form-field>
+          </mat-form-field> -->
 
           <mat-form-field appearance="outline" class="third-width">
             <mat-label>Body Condition</mat-label>
