--- a/src/app/insurance-policy/insurance-policy-form/insurance-policy-form.html
+++ b/src/app/insurance-policy/insurance-policy-form/insurance-policy-form.html
@@ -2,14 +2,12 @@
   <form [formGroup]="rxform" (ngSubmit)="onSubmit()" class="livestock-form">
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Livestock Information</mat-card-title>
+        <mat-card-title>Insurance Policy Information</mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
         <!-- Row 1: Tag Number, Species, Breed -->
 
-        <!-- Animal Photos Section -->
-        <!-- Policy Document Section -->
         <div class="form-row animal-photos-section">
           <label class="section-label">Policy Document</label>
 
@@ -39,19 +37,30 @@
 
 
         <div class="form-row">
-          <mat-form-field appearance="outline" class="third-width">
-            <mat-label>Group Name</mat-label>
+          <mat-form-field appearance="outline" class="half-width">
+            <mat-label>Policy Number</mat-label>
             <input matInput formControlName="policyNumber" type="text" />
             <mat-error *ngIf="policyNumber.hasError('required')">Policy Number is required.</mat-error>
           </mat-form-field>
 
-          <mat-form-field appearance="outline" class="third-width">
+          <mat-form-field appearance="outline" class="half-width">
             <mat-label>Provider</mat-label>
             <input matInput formControlName="provider" type="text" />
             <mat-error *ngIf="provider.hasError('required')">Provider is required.</mat-error>
           </mat-form-field>
 
-          <mat-form-field appearance="outline" class="third-width">
+        </div>
+
+        <!-- Row 3: Farmer, Livestock Group -->
+        <div class="form-row">
+          <mat-form-field appearance="outline" class="half-width">
+            <mat-label>Farmer</mat-label>
+            <mat-select formControlName="farmer">
+              <mat-option *ngFor="let f of farmers" [value]="f.id">{{ f.name }}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="farmer.hasError('required')">Farmer is required.</mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="half-width">
             <mat-label>Livestock Group</mat-label>
             <mat-select formControlName="livestockGroup">
               <mat-option *ngFor="let g of livestockGroups" [value]="g._id">
@@ -64,41 +73,32 @@
           </mat-form-field>
         </div>
 
-        <!-- Row 3: Farmer, Livestock Group -->
         <div class="form-row">
-          <mat-form-field appearance="outline" class="third-width">
-            <mat-label>Farmer</mat-label>
-            <mat-select formControlName="farmer">
-              <mat-option *ngFor="let f of farmers" [value]="f.id">{{ f.name }}</mat-option>
-            </mat-select>
-            <mat-error *ngIf="farmer.hasError('required')">Farmer is required.</mat-error>
-          </mat-form-field>
-
           <mat-form-field appearance="outline" class="half-width">
-            <mat-label>Status</mat-label>
-            <mat-select formControlName="status">
-              <mat-option value="pending">Pending</mat-option>
-              <mat-option value="approved">Approved</mat-option>
-              <mat-option value="rejected">Rejected</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <div class="form-row">
-          <mat-form-field appearance="outline" class="third-width">
             <mat-label>Start Date</mat-label>
             <input matInput formControlName="startDate" type="date" />
             <mat-error *ngIf="startDate.hasError('required')">
               Start Date is required.
             </mat-error>
           </mat-form-field>
-          <mat-form-field appearance="outline" class="third-width">
+          <mat-form-field appearance="outline" class="half-width">
             <mat-label>End Date</mat-label>
             <input matInput formControlName="endDate" type="date" />
             <mat-error *ngIf="startDate.hasError('required')">
               End Date is required.
             </mat-error>
           </mat-form-field>
+        </div>
+
+        <div class="form-row">
+          <!-- <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Status</mat-label>
+            <mat-select formControlName="status">
+              <mat-option value="pending">Pending</mat-option>
+              <mat-option value="approved">Approved</mat-option>
+              <mat-option value="rejected">Rejected</mat-option>
+            </mat-select>
+          </mat-form-field> -->
         </div>
 
         
