--- a/src/app/insurance-policy/insurance-policy-list/insurance-policy-list.html
+++ b/src/app/insurance-policy/insurance-policy-list/insurance-policy-list.html
@@ -1,7 +1,7 @@
 <div class="users-container">
   <div class="users-header">
     <h2>Insurance Policies</h2>
-    <button mat-raised-button color="primary" (click)="onCreate()">
+    <button mat-raised-button color="primary" (click)="onCreate()" *ngIf="user?.role === 'farmer'">
       <mat-icon>add</mat-icon> Create Insurance Policies
     </button>
   </div>
@@ -22,7 +22,7 @@
 
             <!-- Policy Number -->
       <ng-container matColumnDef="policyNumber">
-        <th mat-header-cell *matHeaderCellDef> Group Name </th>
+        <th mat-header-cell *matHeaderCellDef> Policy Number </th>
         <td mat-cell *matCellDef="let insurancePolicy"> {{ insurancePolicy.policyNumber }} </td>
       </ng-container>
 
@@ -53,7 +53,14 @@
           <button mat-icon-button color="accent" (click)="onDetails(insurancePolicy._id!)">
             <mat-icon>visibility</mat-icon>
           </button>
-          <button mat-icon-button color="primary" (click)="onUpdate(insurancePolicy._id!)">
+          <button mat-icon-button color="primary" 
+            (click)="onUpdate(insurancePolicy._id!)"
+            *ngIf="user?.role === 'farmer'"
+            [disabled]="
+              insurancePolicy.status === 'pending'
+              || insurancePolicy.status === 'approved'
+            "
+          >
             <mat-icon>edit</mat-icon>
           </button>
         </td>
