add auth guard logout when user expired & make user form province read only with value Occidental Mindoro

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -61,7 +61,7 @@
     </mat-toolbar>
 
     <!-- Page Content -->
-    <div class="main-content">
+    <div class="main-content" style="padding: 20px;">
       <router-outlet></router-outlet>
     </div>
 
