--- a/src/app/livestock-group/livestock-group-details/livestock-group-details.html
+++ b/src/app/livestock-group/livestock-group-details/livestock-group-details.html
@@ -124,7 +124,7 @@
         (click)="onApprove()"
         [disabled]="livestockGroup.status === 'approved' || livestocks.length === 0"
       >
-        <mat-icon>check_circle</mat-icon> Approve
+        <mat-icon>check_circle</mat-icon> Verify
       </button>
     </mat-card-actions>
   </mat-card>
