fix livestock group & livestock details

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -61,7 +61,7 @@
     </mat-toolbar>
 
     <!-- Page Content -->
-    <div class="main-content" style="padding: 20px;">
+    <div class="main-content">
       <router-outlet></router-outlet>
     </div>
 
