--- a/src/app/user/user-list/user-list.html
+++ b/src/app/user/user-list/user-list.html
@@ -36,7 +36,7 @@
       <ng-container matColumnDef="address">
         <th mat-header-cell *matHeaderCellDef> Address </th>
         <td mat-cell *matCellDef="let user">
-          {{ user.address.city }}, {{ user.address.barangay }}
+          {{ user.address.municipality }}, {{ user.address.barangay }}
         </td>
       </ng-container>
 
