--- a/src/app/health-record/health-record-list/health-record-list.html
+++ b/src/app/health-record/health-record-list/health-record-list.html
@@ -17,7 +17,7 @@
       <!-- Animal (Tag Number / Reference) -->
       <ng-container matColumnDef="animal">
         <th mat-header-cell *matHeaderCellDef> Animal </th>
-        <td mat-cell *matCellDef="let record"> {{ record.animal || 'N/A' }} </td>
+        <td mat-cell *matCellDef="let record"> {{ record.animal.name || 'N/A' }} </td>
       </ng-container>
 
       <!-- Visit Date -->
@@ -53,7 +53,7 @@
       <!-- Technician -->
       <ng-container matColumnDef="technician">
         <th mat-header-cell *matHeaderCellDef> Technician </th>
-        <td mat-cell *matCellDef="let record"> {{ record.technician }} </td>
+        <td mat-cell *matCellDef="let record"> {{ record.technician.firstName }} {{ record.technician.lastName }} </td>
       </ng-container>
 
       <!-- Action -->
